# pylibreoffice

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build  Dockerfile2014.build  MANIFEST.in  README.md  build.sh  cmake-3.22.6-linux-x86_64.sh  deps  install_deps.sh  pyproject.toml  setup.py
example/: example.py  test.doc  test.xls
pyoffice/: py_office.pyx  pyoffice.py  pyoffice_demo
pyoffice/src/: main.cxx  office.cxx  office.hpp  py_office.cpp
src/: office.cxx  py_office.cpp  pybind_office.cpp
tests/: test_conv.py
tests/data/: en.doc  test_xls.xlsx
