[project]
name = "pylibreoffice"
version = "0.1.4"
description = "A Python library for handling Microsoft Office documents, built with LibreOfficeKit."
authors = [    { name = "vforfreedom", email = "vforfreedom96@gmail.com" }
]
keywords = ["office", "libreoffice","doc","ppt","xls","docx","xlsx","pptx","pdf", "libreofficekit", "cython", "pybind11"]
dependencies = [
"Cython",
"pybind11"
]

readme = "README.md"
[project.urls]
Homepage = "https://github.com/begonia-org/pylibreoffice"
Issues = "https://github.com/begonia-org/pylibreoffice/issues"
Documentation = "https://github.com/begonia-org/pylibreoffice"
Repository = "https://github.com/begonia-org/pylibreoffice.git"
[tool.poetry.dependencies]
python = "^3.10"
cython = "^3.0.11"
pybind11 = "^2.13.6"

[build-system]
requires = ["setuptools>=75.6.0", "wheel", "scikit-build", "cmake>=3.21", "ninja", "cython", "pybind11"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
include-package-data = true  # 确保打包时包含非 Python 文件

[tool.setuptools.packages.find]
exclude = ["pylibreoffice.__pycache__", "*.tests", "*.pyc", "*.pyo", "*.egg-info", "*.dist-info","__pycache__","_sk_build"]
namespaces = false  
